[package]
edition = "2021"
name = "pulsar"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
logos = "0.12.1"
miette = { version = "5.1.0", features = ["fancy"] }
substring = "1.4.5"
