[package]
edition = "2021"
name = "pulsar"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
ariadne = "0.1.5"
clap = {version = "3.2.8", features = ["derive"]}
colored = "2.0.0"
logos = "0.12.1"
substring = "1.4.5"
